--- a/src/main/resources/ec/edu/espol/sistemaventavehiculo/PantallaInicio.fxml
+++ b/src/main/resources/ec/edu/espol/sistemaventavehiculo/PantallaInicio.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ec.edu.espol.sistemaventavehiculo.PantallaMenuController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ec.edu.espol.controllers.PantallaInicioController">
    <center>
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -52,7 +52,7 @@
             </Button>
             <ImageView fitHeight="72.0" fitWidth="77.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                <image>
-                  <Image url="@logo.png" />
+                  <Image url="@../../../../img/logo.png" />
                </image>
             </ImageView>
          </children>
@@ -63,7 +63,7 @@
          <children>
             <ImageView fitHeight="400.0" fitWidth="216.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@fondo.jpg" />
+                  <Image url="@../../../../img/fondo.jpg" />
                </image>
             </ImageView>
          </children></AnchorPane>
