--- a/src/main/resources/ec/edu/espol/sistemaventavehiculo/PantallaInicio.fxml
+++ b/src/main/resources/ec/edu/espol/sistemaventavehiculo/PantallaInicio.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -55,6 +56,12 @@
                   <Image url="@../../../../img/logo.png" />
                </image>
             </ImageView>
+            <Label text="No tienes una cuenta?" textFill="#0e5684d6" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <Label onMouseClicked="#registrarUsuario" text="Cree una." textFill="#0598ff" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="6">
+               <GridPane.margin>
+                  <Insets right="38.0" />
+               </GridPane.margin>
+            </Label>
          </children>
       </GridPane>
    </center>
