--- a/src/main/resources/ec/edu/espol/sistemaventavehiculo/VehiculoRegistro.fxml
+++ b/src/main/resources/ec/edu/espol/sistemaventavehiculo/VehiculoRegistro.fxml
@@ -3,6 +3,8 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -46,6 +48,11 @@
                </font>
             </Label>
             <Label layoutX="58.0" layoutY="40.0" text="Seleccione el tipo de vehiculo:" textFill="#0763a1" />
+            <ImageView fitHeight="35.0" fitWidth="38.0" layoutX="13.0" layoutY="10.0" onMouseClicked="#regresar" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../img/regresar.jpg" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </top>
