--- a/src/main/resources/ec/edu/espol/sistemaventavehiculo/BuscarVehiculo.fxml
+++ b/src/main/resources/ec/edu/espol/sistemaventavehiculo/BuscarVehiculo.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -102,6 +104,11 @@
       <AnchorPane prefHeight="60.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
             <Button fx:id="btnBuscar" layoutX="247.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#buscar" text="Buscar Vehiculo" />
+            <ImageView fitHeight="37.0" fitWidth="34.0" layoutX="25.0" layoutY="13.0" onMouseClicked="#regresar" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../img/regresar.jpg" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </bottom>
