--- a/src/main/resources/ec/edu/espol/sistemaventavehiculo/AutoRegistro.fxml
+++ b/src/main/resources/ec/edu/espol/sistemaventavehiculo/AutoRegistro.fxml
@@ -29,8 +29,8 @@
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="94.4000244140625" minWidth="10.0" prefWidth="16.80001220703125" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="131.59996337890624" minWidth="10.0" prefWidth="107.19998779296876" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="147.2" minWidth="10.0" prefWidth="91.799951171875" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="147.2" minWidth="10.0" prefWidth="114.39996337890625" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.99998474121094" minWidth="10.0" prefWidth="150.99998474121094" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="147.2" minWidth="10.0" prefWidth="53.4000152587891" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="186.39998779296877" minWidth="10.0" prefWidth="176.00003662109378" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="123.19999999999999" minWidth="10.0" prefWidth="75.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="91.4000244140625" minWidth="10.0" prefWidth="23.0" />
@@ -55,7 +55,7 @@
             <Label text="Ingrese el color: " GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <Label text="Ingrese el tipo de combustible: " GridPane.columnIndex="4" GridPane.rowIndex="3" />
             <Label text="Ingrese el precio: " GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <Button mnemonicParsing="false" onMouseClicked="#registrar" text="Registrar Vehiculo" GridPane.columnIndex="3" GridPane.rowIndex="6" GridPane.valignment="BOTTOM" />
+            <Button mnemonicParsing="false" onMouseClicked="#registrar" prefHeight="26.0" prefWidth="130.0" text="Registrar Vehiculo" GridPane.columnIndex="2" GridPane.rowIndex="6" GridPane.valignment="BOTTOM" />
             <TextField fx:id="marca" GridPane.columnIndex="2" GridPane.rowIndex="1" />
             <TextField fx:id="placa" GridPane.columnIndex="2" />
             <TextField fx:id="recorrido" GridPane.columnIndex="5" GridPane.rowIndex="2" />
@@ -69,6 +69,7 @@
             <Label text="Ingrese el número de vidrios: " GridPane.columnIndex="4" GridPane.rowIndex="4" />
             <TextField fx:id="transmision" GridPane.columnIndex="5" GridPane.rowIndex="5" />
             <TextField fx:id="vidrios" GridPane.columnIndex="5" GridPane.rowIndex="4" />
+            <Button mnemonicParsing="false" onMouseClicked="#adjuntarFoto" text="Adjuntar foto del vehículo" GridPane.columnIndex="4" GridPane.rowIndex="6" GridPane.valignment="BOTTOM" />
          </children>
       </GridPane>
    </center>
