--- a/src/main/resources/ec/edu/espol/sistemaventavehiculo/CamionetaRegistro.fxml
+++ b/src/main/resources/ec/edu/espol/sistemaventavehiculo/CamionetaRegistro.fxml
@@ -29,8 +29,8 @@
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="94.4000244140625" minWidth="10.0" prefWidth="15.999993896484376" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="131.59996337890624" minWidth="10.0" prefWidth="108.00000610351563" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="147.2" minWidth="10.0" prefWidth="91.799951171875" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="147.2" minWidth="10.0" prefWidth="113.5999755859375" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="173.40000915527344" minWidth="10.0" prefWidth="166.99998474121094" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="147.2" minWidth="10.0" prefWidth="36.60001525878903" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="186.39998779296877" minWidth="10.0" prefWidth="176.80002441406248" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="123.19999999999999" minWidth="10.0" prefWidth="75.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="91.4000244140625" minWidth="10.0" prefWidth="23.0" />
@@ -55,7 +55,7 @@
             <Label text="Ingrese el color: " GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <Label text="Ingrese el tipo de combustible: " GridPane.columnIndex="4" GridPane.rowIndex="3" />
             <Label text="Ingrese el precio: " GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <Button mnemonicParsing="false" onMouseClicked="#registrar" text="Registrar Vehiculo" GridPane.columnIndex="3" GridPane.rowIndex="6" GridPane.valignment="BOTTOM" />
+            <Button mnemonicParsing="false" onMouseClicked="#registrar" text="Registrar Vehiculo" GridPane.columnIndex="2" GridPane.rowIndex="6" GridPane.valignment="BOTTOM" />
             <TextField fx:id="marca" GridPane.columnIndex="2" GridPane.rowIndex="1" />
             <TextField fx:id="placa" GridPane.columnIndex="2" />
             <TextField fx:id="recorrido" GridPane.columnIndex="5" GridPane.rowIndex="2" />
@@ -71,6 +71,7 @@
             <TextField fx:id="traccion" GridPane.columnIndex="2" GridPane.rowIndex="5" />
             <TextField fx:id="vidrios" GridPane.columnIndex="5" GridPane.rowIndex="4" />
             <TextField fx:id="transmision" GridPane.columnIndex="5" GridPane.rowIndex="5" />
+            <Button mnemonicParsing="false" onMouseClicked="#adjuntarFoto" text="Adjuntar imagen" GridPane.columnIndex="4" GridPane.rowIndex="6" GridPane.valignment="BOTTOM" />
          </children>
       </GridPane>
    </center>
