--- a/src/main/resources/ec/edu/espol/sistemaventavehiculo/MotoRegistro.fxml
+++ b/src/main/resources/ec/edu/espol/sistemaventavehiculo/MotoRegistro.fxml
@@ -29,8 +29,8 @@
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="94.4000244140625" minWidth="10.0" prefWidth="16.799981689453126" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="131.59996337890624" minWidth="10.0" prefWidth="107.20001831054688" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="147.2" minWidth="10.0" prefWidth="91.799951171875" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="147.2" minWidth="10.0" prefWidth="113.60003662109375" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="170.1999969482422" minWidth="10.0" prefWidth="170.1999969482422" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="147.2" minWidth="10.0" prefWidth="34.20000305175785" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="186.39998779296877" minWidth="10.0" prefWidth="176.79996337890628" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="123.19999999999999" minWidth="10.0" prefWidth="75.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="91.4000244140625" minWidth="10.0" prefWidth="23.0" />
@@ -54,7 +54,7 @@
             <Label text="Ingrese el color: " GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <Label text="Ingrese el tipo de combustible: " GridPane.columnIndex="4" GridPane.rowIndex="3" />
             <Label text="Ingrese el precio: " GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <Button mnemonicParsing="false" onMouseClicked="#registrar" text="Registrar Vehiculo" GridPane.columnIndex="3" GridPane.rowIndex="5" GridPane.valignment="BOTTOM" />
+            <Button mnemonicParsing="false" onMouseClicked="#registrar" text="Registrar Vehiculo" GridPane.columnIndex="2" GridPane.rowIndex="5" GridPane.valignment="BOTTOM" />
             <TextField fx:id="marca" GridPane.columnIndex="2" GridPane.rowIndex="1" />
             <TextField fx:id="placa" GridPane.columnIndex="2" />
             <TextField fx:id="recorrido" GridPane.columnIndex="5" GridPane.rowIndex="2" />
@@ -64,6 +64,7 @@
             <TextField fx:id="modelo" GridPane.columnIndex="2" GridPane.rowIndex="2" />
             <TextField fx:id="precio" GridPane.columnIndex="2" GridPane.rowIndex="4" />
             <TextField fx:id="combustible" GridPane.columnIndex="5" GridPane.rowIndex="3" />
+            <Button mnemonicParsing="false" onMouseClicked="#adjuntarFoto" text="Adjuntar imagen" GridPane.columnIndex="4" GridPane.rowIndex="5" GridPane.valignment="BOTTOM" />
          </children>
       </GridPane>
    </center>
