--- a/src/main/resources/ec/edu/espol/sistemaventavehiculo/VehiculosMuestras.fxml
+++ b/src/main/resources/ec/edu/espol/sistemaventavehiculo/VehiculosMuestras.fxml
@@ -3,32 +3,24 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ec.edu.espol.controllers.VehiculosMuestrasController">
-   <top>
-      <HBox BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets top="20.0" />
-         </BorderPane.margin>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ec.edu.espol.controllers.VehiculosMuestrasController">
+   <children>
+      <ImageView fitHeight="414.0" fitWidth="664.0" layoutX="-50.0" layoutY="-14.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../img/fondito.jpg" />
+         </image>
+      </ImageView>
+      <AnchorPane layoutX="8.0" layoutY="9.0" prefHeight="382.0" prefWidth="585.0" style="-fx-background-color: #FFFF;">
          <children>
-            <ImageView fitHeight="30.0" fitWidth="38.0" onMouseClicked="#regresarPagina" pickOnBounds="true" preserveRatio="true">
-               <HBox.margin>
-                  <Insets left="10.0" />
-               </HBox.margin>
-               <image>
-                  <Image url="@../../../../img/regresar.jpg" />
-               </image>
-            </ImageView>
-            <Label contentDisplay="TOP" text="Resultados de la Búsqueda" textAlignment="CENTER" textFill="#0598ff">
+            <Label contentDisplay="TOP" layoutX="44.0" layoutY="17.0" prefHeight="26.0" prefWidth="415.0" text="Resultados de la Búsqueda" textAlignment="CENTER" textFill="#0598ff">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
@@ -36,47 +28,22 @@
                   <Insets left="150.0" />
                </padding>
             </Label>
-         </children>
-      </HBox>
-   </top>
-   <center>
-      <GridPane BorderPane.alignment="CENTER">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="353.59998779296876" minWidth="10.0" prefWidth="287.999951171875" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="247.40002441406244" minWidth="10.0" prefWidth="220.800048828125" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <TextArea fx:id="txtArea" prefHeight="234.0" prefWidth="330.0">
-               <GridPane.margin>
-                  <Insets left="20.0" right="10.0" top="20.0" />
-               </GridPane.margin>
-            </TextArea>
-            <ImageView fx:id="imgv" fitHeight="231.0" fitWidth="217.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
-               <GridPane.margin>
-                  <Insets bottom="10.0" left="10.0" right="20.0" top="20.0" />
-               </GridPane.margin>
+            <ImageView fitHeight="30.0" fitWidth="38.0" layoutX="14.0" layoutY="15.0" onMouseClicked="#regresarPagina" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../img/regresar.jpg" />
+               </image>
             </ImageView>
+            <Button fx:id="btnAnterior" layoutX="53.0" layoutY="347.0" mnemonicParsing="false" onMouseClicked="#regresar" prefHeight="26.0" prefWidth="112.0" style="-fx-background-color: #0598ff;" text="Anterior Vehiculo" textFill="WHITE" />
+            <Button fx:id="btnSiguiente" layoutX="414.0" layoutY="347.0" mnemonicParsing="false" onMouseClicked="#avanzar" prefHeight="26.0" prefWidth="119.0" style="-fx-background-color: #0598ff;" text="Siguiente Vehiculo" textFill="WHITE" />
+            <TableView fx:id="informacion" layoutX="30.0" layoutY="68.0" prefHeight="265.0" prefWidth="270.0">
+              <columns>
+                  <TableColumn prefWidth="301.599987411499" text="Información             " />
+              </columns>
+            </TableView>
+            <Button fx:id="btnOfertar" layoutX="226.0" layoutY="347.0" mnemonicParsing="false" onMouseClicked="#avanzar" prefHeight="26.0" prefWidth="126.0" style="-fx-background-color: #0598ff;" text="Ofertar por vehículo" textFill="WHITE" />
+            <ImageView fitHeight="249.0" fitWidth="200.0" layoutX="348.0" layoutY="76.0" pickOnBounds="true" preserveRatio="true" />
          </children>
-      </GridPane>
-   </center>
-   <bottom>
-      <GridPane BorderPane.alignment="CENTER">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Button fx:id="btnAnterior" mnemonicParsing="false" onMouseClicked="#regresar" prefHeight="26.0" prefWidth="112.0" style="-fx-background-color: #0598ff;" text="Anterior Vehiculo" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-            <Button fx:id="btnSiguiente" mnemonicParsing="false" onMouseClicked="#avanzar" prefHeight="26.0" prefWidth="119.0" style="-fx-background-color: #0598ff;" text="Siguiente Vehiculo" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-         </children>
-      </GridPane>
-   </bottom>
-</BorderPane>
+      </AnchorPane>
+      <HBox layoutX="69.0" layoutY="58.0" />
+   </children>
+</AnchorPane>
