--- a/src/main/resources/ec/edu/espol/sistemaventavehiculo/VehiculosMuestras.fxml
+++ b/src/main/resources/ec/edu/espol/sistemaventavehiculo/VehiculosMuestras.fxml
@@ -5,45 +5,55 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ec.edu.espol.controllers.VehiculosMuestrasController">
-   <children>
-      <ImageView fitHeight="414.0" fitWidth="664.0" layoutX="-50.0" layoutY="-14.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../img/fondito.jpg" />
-         </image>
-      </ImageView>
-      <AnchorPane layoutX="8.0" layoutY="9.0" prefHeight="382.0" prefWidth="585.0" style="-fx-background-color: #FFFF;">
+<BorderPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ec.edu.espol.controllers.VehiculosMuestrasController">
+   <top>
+      <HBox alignment="CENTER" spacing="250.0" BorderPane.alignment="TOP_LEFT">
          <children>
-            <Label contentDisplay="TOP" layoutX="44.0" layoutY="17.0" prefHeight="26.0" prefWidth="415.0" text="Resultados de la Búsqueda" textAlignment="CENTER" textFill="#0598ff">
+            <Label contentDisplay="TOP" text="Resultados de la Búsqueda" textAlignment="CENTER" textFill="#0598ff">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
-               <padding>
-                  <Insets left="150.0" />
-               </padding>
             </Label>
-            <ImageView fitHeight="30.0" fitWidth="38.0" layoutX="14.0" layoutY="15.0" onMouseClicked="#regresarPagina" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../img/regresar.jpg" />
-               </image>
-            </ImageView>
-            <Button fx:id="btnAnterior" layoutX="53.0" layoutY="347.0" mnemonicParsing="false" onMouseClicked="#regresar" prefHeight="26.0" prefWidth="112.0" style="-fx-background-color: #0598ff;" text="Anterior Vehiculo" textFill="WHITE" />
-            <Button fx:id="btnSiguiente" layoutX="414.0" layoutY="347.0" mnemonicParsing="false" onMouseClicked="#avanzar" prefHeight="26.0" prefWidth="119.0" style="-fx-background-color: #0598ff;" text="Siguiente Vehiculo" textFill="WHITE" />
-            <TableView fx:id="informacion" layoutX="30.0" layoutY="68.0" prefHeight="265.0" prefWidth="270.0">
-              <columns>
-                  <TableColumn prefWidth="301.599987411499" text="Información             " />
-              </columns>
-            </TableView>
-            <Button fx:id="btnOfertar" layoutX="226.0" layoutY="347.0" mnemonicParsing="false" onMouseClicked="#avanzar" prefHeight="26.0" prefWidth="126.0" style="-fx-background-color: #0598ff;" text="Ofertar por vehículo" textFill="WHITE" />
-            <ImageView fitHeight="249.0" fitWidth="200.0" layoutX="348.0" layoutY="76.0" pickOnBounds="true" preserveRatio="true" />
          </children>
-      </AnchorPane>
-      <HBox layoutX="69.0" layoutY="58.0" />
-   </children>
-</AnchorPane>
+         <padding>
+            <Insets left="20.0" top="15.0" />
+         </padding>
+      </HBox>
+   </top>
+   <right>
+      <ImageView fx:id="imgvVehiculo" fitHeight="500.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
+   </right>
+   <bottom>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button fx:id="btnOfertar" mnemonicParsing="false" onMouseClicked="#ofertar" prefHeight="26.0" prefWidth="126.0" style="-fx-background-color: #0598ff;" text="Ofertar" textFill="WHITE" />
+         </children>
+      </HBox>
+   </bottom>
+   <center>
+      <TableView fx:id="tbViewInformacion" prefHeight="265.0" prefWidth="270.0" BorderPane.alignment="CENTER">
+         <columns>
+            <TableColumn fx:id="tcPlaca" prefWidth="75.0" text="Placa" />
+            <TableColumn fx:id="tcMarca" prefWidth="75.0" text="Marca" />
+            <TableColumn fx:id="tcModelo" prefWidth="100.0" text="Modelo" />
+            <TableColumn fx:id="tcTipoMotor" prefWidth="150.0" text="Motor" />
+            <TableColumn fx:id="tcAño" prefWidth="40.0" text="Año" />
+            <TableColumn fx:id="tcRecorrido" prefWidth="60.0" text="Recorrido" />
+            <TableColumn fx:id="tcColor" prefWidth="50.0" text="Color" />
+            <TableColumn fx:id="tcTipoCombustible" text="Combustible" />
+            <TableColumn fx:id="tcPrecio" prefWidth="60.0" text="Precio" />
+            <TableColumn fx:id="tcVidrios" prefWidth="50.0" text="Vidrios" />
+            <TableColumn fx:id="tcTransmision" prefWidth="75.0" text="Transmision" />
+            <TableColumn fx:id="tcTraccion" prefWidth="60.0" text="Tracción" />
+         </columns>
+         <BorderPane.margin>
+            <Insets left="20.0" top="20.0" />
+         </BorderPane.margin>
+      </TableView>
+   </center>
+</BorderPane>
